2003-03-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMenu.m: ([_updateUserDefaults:]) restore saved menu
	location functionality (was only working for torn off menus).

2003-03-06  Willem Rein Oudshoorn  <woudshoo@xs4all.nl>

	* Source/NSMenuView.m: Added NSMenuTitleView (moved
	from NSMenu).
	([NSMenuView -detachSubmenu]): Removed setting highlighting.
	([NSMenuView -attachSubmenuForItemAtIndex:]) added logging.
	([NSMenuView -update]): Handle _titleView.
	([NSMenuView -sizeToFit]): Take titleView into account
	([NSMenuView -performActionWithHighlightingForItemAtIndex:]): 
	restore old highlighting.
	([NSMenuView -trackWithEvent:]): Rewritten.
	([NSMenuView -mouseDown:]): Only restore menu position
	when needed.
	([NSMenuView -rightMouseDown:theEvent]): On menus treat
	as ordinary mouse down to avoid rightclick menus on menus.

	* Source/NSMenu.m (NSView): Moved NSMenuWindowTitleView to
	NSMenuView.  Added comments. Added -_updateUserDefaults:,
	-_menuMoved: methods to track moving menus.
	Renamed -_setTornOff:  to -setTornOff:, -isFollowTransient to
	-isTransient.
	([NSMenu -initWithTitle:]): Remove some old comments, remove
	reference to titleView, listen to window move notification and
	enqueued move notification.
	([NSMenu -attachedMenu]): Adjusted for renamed ivar.
	([NSMenu -sizeToFit]): Remove references to titleView
	([NSMenu -setTornOff:]): Remove references to titleView,
	call update to NSMenuView instead.  
	([NSMenu -isPartlyOffScreen]): Do not depend in removed ivar.
	([NSMenu -_performMenuClose:]): adjust to renamed methods, will
	force synchronization of userdefaults.
	([NSMenu -displayTransient]): Removed references to _titleView,
	remember the highlighted index to restore with -closeTransient.
	([NSMenu -close]): remove references to _titleview, use methods instead
	of relying on ivars. added call to update on menu representation.
	([NSMenu -closeTransient]): Remove references to _titleView, restore